<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.changePassword.ChangePasswordActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginGuidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginGuidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.93" />

    <EditText
        android:id="@+id/editTextChangePWNewPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/ChangePW_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toStartOf="@+id/loginGuidelineRight"
        app:layout_constraintStart_toStartOf="@+id/loginGuidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/editTextChangePWCurrentPassword" />

    <EditText
        android:id="@+id/editTextChangePWCurrentPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/ChangePW_currentPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toStartOf="@+id/loginGuidelineRight"
        app:layout_constraintStart_toStartOf="@+id/loginGuidelineLeft"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextChangePWNewPasswordConfirmation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/ChangePW_passwordConfirmation"
        android:inputType="textPassword"
        app:layout_constraintEnd_toStartOf="@+id/loginGuidelineRight"
        app:layout_constraintStart_toStartOf="@+id/loginGuidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/editTextChangePWNewPassword" />

    <Button
        android:id="@+id/changePWButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/change_password"
        app:layout_constraintEnd_toStartOf="@+id/loginGuidelineRight"
        app:layout_constraintStart_toStartOf="@+id/loginGuidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/editTextChangePWNewPasswordConfirmation" />

    <ProgressBar
        android:id="@+id/loadingChangePW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/changePWButton"
        app:layout_constraintEnd_toEndOf="@+id/editTextChangePWNewPasswordConfirmation"
        app:layout_constraintStart_toStartOf="@+id/editTextChangePWNewPasswordConfirmation"
        app:layout_constraintTop_toBottomOf="@+id/editTextChangePWNewPasswordConfirmation" />
</androidx.constraintlayout.widget.ConstraintLayout>